--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chokidar": "^3.5.2",
     "next": "12.0.1",
+    "querystring": "^0.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
