--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "chokidar": "^3.5.2",
-    "next": "12.0.1",
+    "g": "^2.0.1",
+    "next": "^12.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sharp": "^0.29.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
