--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "chokidar": "^3.5.2",
     "g": "^2.0.1",
-    "next": "^12.0.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.3.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sharp": "^0.29.2"
   },
   "devDependencies": {
